src/util/vrl/src/y.output
Terminals which are not used

   PERIODKEY


Grammar

    0 $accept: FILE $end

    1 FILE: EMPTY
    2     | FILE STRUCTURE
    3     | FILE FUNCTION
    4     | FILE MAIN

    5 STRUCTURE: STRUCTKEY NAME LEFTBRACEKEY STRUCTBODY1 RIGHTBRACEKEY
    6          | STRUCTKEY NAME COLONKEY NAMELIST LEFTBRACEKEY STRUCTBODY2 RIGHTBRACEKEY

    7 STRUCTBODY1: EMPTY
    8            | STRUCTBODY1 SIMPLE_DECLARATION
    9            | STRUCTBODY1 FUNCTION
   10            | STRUCTBODY1 CONSTRUCTOR

   11 STRUCTBODY2: EMPTY
   12            | STRUCTBODY2 SIMPLE_DECLARATION
   13            | STRUCTBODY2 FUNCTION
   14            | STRUCTBODY2 CONSTRUCTOR

   15 FUNCTION: FUNCTIONKEY NAME LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY
   16         | FUNCTIONKEY NAME LEFTPARENKEY RIGHTPARENKEY LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY
   17         | FUNCTIONKEY NAME LEFTPARENKEY NAMELIST RIGHTPARENKEY LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY

   18 MAIN: MAINKEY LEFTPARENKEY RIGHTPARENKEY LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY

   19 CONSTRUCTOR: CONSTRUCTORKEY LEFTPARENKEY RIGHTPARENKEY LEFTBRACEKEY CONSTRUCTORBODY RIGHTBRACEKEY
   20            | CONSTRUCTORKEY LEFTPARENKEY NAMELIST RIGHTPARENKEY LEFTBRACEKEY CONSTRUCTORBODY RIGHTBRACEKEY

   21 CONSTRUCTORBODY: EMPTY
   22                | CONSTRUCTORBODY CONSTRUCTOR_CALL
   23                | CONSTRUCTORBODY INSTRUCTION

   24 INSTRUCTIONLIST: EMPTY
   25                | INSTRUCTIONLIST INSTRUCTION

   26 INSTRUCTION: DECLARATION
   27            | ASSIGNMENT
   28            | STATEMENT

   29 CONSTRUCTOR_CALL: NAME LEFTPARENKEY RIGHTPARENKEY SEMICOLONKEY
   30                 | NAME LEFTPARENKEY EXPRESSIONLIST RIGHTPARENKEY SEMICOLONKEY

   31 DECLARATION: SIMPLE_DECLARATION
   32            | COMPLEX_DECLARATION

   33 ASSIGNMENT: STRING_ASSIGNMENT
   34           | EXPRESSION_ASSIGNMENT
   35           | VARIABLE_ASSIGNMENT
   36           | NEWOBJECT_ASSIGNMENT

   37 STATEMENT: IF_STATEMENT
   38          | FOR_STATEMENT
   39          | RETURNKEY EXPRESSION SEMICOLONKEY

   40 SIMPLE_DECLARATION: VARKEY NAMELIST SEMICOLONKEY
   41                   | VARKEY ARRAYNAME SEMICOLONKEY

   42 COMPLEX_DECLARATION: VARKEY VARIABLE EQUALKEY STRING SEMICOLONKEY
   43                    | VARKEY VARIABLE EQUALKEY EXPRESSION SEMICOLONKEY

   44 STRING_ASSIGNMENT: VARIABLE EQUALKEY STRING SEMICOLONKEY

   45 EXPRESSION_ASSIGNMENT: VARIABLE EQUALKEY CALCULABLE_EXPRESSION SEMICOLONKEY

   46 VARIABLE_ASSIGNMENT: VARIABLE EQUALKEY VARIABLE SEMICOLONKEY

   47 NEWOBJECT_ASSIGNMENT: VARIABLE EQUALKEY NEWOBJECT SEMICOLONKEY

   48 IF_STATEMENT: SIMPLE_IF_STATEMENT
   49             | IF_ELSE_STATEMENT

   50 SIMPLE_IF_STATEMENT: IFKEY LOGICAL_EXPRESSION LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY

   51 IF_ELSE_STATEMENT: IFKEY LOGICAL_EXPRESSION LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY ELSEKEY LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY

   52 FOR_STATEMENT: FORKEY LEFTPARENKEY EXPRESSION_ASSIGNMENT LOGICAL_EXPRESSION SEMICOLONKEY EXPRESSION_ASSIGNMENT RIGHTPARENKEY LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY

   53 EXPRESSIONLIST: EXPRESSION
   54               | EXPRESSIONLIST COMMAKEY EXPRESSION

   55 EXPRESSION: CALCULABLE_EXPRESSION
   56           | VARIABLE

   57 CALCULABLE_EXPRESSION: NUMBER
   58                      | CALLKEY NAME LEFTPARENKEY RIGHTPARENKEY
   59                      | CALLKEY NAME LEFTPARENKEY EXPRESSIONLIST RIGHTPARENKEY
   60                      | BINARY_OPERATION
   61                      | UNARY_OPERATION
   62                      | LEFTPARENKEY EXPRESSION RIGHTPARENKEY

   63 LOGICAL_EXPRESSION: COMPARISON
   64                   | LOGICAL_BINARY_OPERATION
   65                   | LOGICAL_UNARY_OPERATION
   66                   | LEFTPARENKEY LOGICAL_EXPRESSION RIGHTPARENKEY

   67 NEWOBJECT: NEWKEY NAME LEFTPARENKEY RIGHTPARENKEY
   68          | NEWKEY NAME LEFTPARENKEY EXPRESSIONLIST RIGHTPARENKEY

   69 VARIABLE: SIMPLE_VARIABLE
   70         | COMPLEX_VARIABLE

   71 SIMPLE_VARIABLE: NAME
   72                | ARRAYNAME

   73 ARRAYNAME: NAME LEFTBRACKETKEY EXPRESSION RIGHTBRACKETKEY

   74 COMPLEX_VARIABLE: SIMPLE_VARIABLE DOTKEY SIMPLE_VARIABLE
   75                 | COMPLEX_VARIABLE DOTKEY SIMPLE_VARIABLE

   76 NAMELIST: NAME
   77         | NAMELIST COMMAKEY NAME

   78 UNARY_OPERATION: LEFTPARENKEY MINUSKEY EXPRESSION RIGHTPARENKEY
   79                | ABSKEY LEFTPARENKEY EXPRESSION RIGHTPARENKEY

   80 BINARY_OPERATION: EXPRESSION PLUSKEY EXPRESSION
   81                 | EXPRESSION MINUSKEY EXPRESSION
   82                 | EXPRESSION MULTKEY EXPRESSION
   83                 | EXPRESSION DIVKEY EXPRESSION

   84 COMPARISON: EXPRESSION SUPKEY EXPRESSION
   85           | EXPRESSION INFKEY EXPRESSION
   86           | EXPRESSION SUPEQUALKEY EXPRESSION
   87           | EXPRESSION INFEQUALKEY EXPRESSION
   88           | EXPRESSION EQUALEQUALKEY EXPRESSION
   89           | EXPRESSION EXCLAMATIONEQUALKEY EXPRESSION

   90 LOGICAL_UNARY_OPERATION: EXCLAMATIONKEY LOGICAL_EXPRESSION

   91 LOGICAL_BINARY_OPERATION: LOGICAL_EXPRESSION ORKEY LOGICAL_EXPRESSION
   92                         | LOGICAL_EXPRESSION ANDKEY LOGICAL_EXPRESSION

   93 NUMBER: INTEGER
   94       | FLOATNUMBER

   95 EMPTY: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
STRUCTKEY (258) 5 6
LEFTBRACEKEY (259) 5 6 15 16 17 18 19 20 50 51 52
RIGHTBRACEKEY (260) 5 6 15 16 17 18 19 20 50 51 52
VARKEY (261) 40 41 42 43
SEMICOLONKEY (262) 29 30 39 40 41 42 43 44 45 46 47 52
COMMAKEY (263) 54 77
LEFTBRACKETKEY (264) 73
RIGHTBRACKETKEY (265) 73
CONSTRUCTORKEY (266) 19 20
NEWKEY (267) 67 68
LEFTPARENKEY (268) 16 17 18 19 20 29 30 52 58 59 62 66 67 68 78 79
RIGHTPARENKEY (269) 16 17 18 19 20 29 30 52 58 59 62 66 67 68 78 79
EQUALKEY (270) 42 43 44 45 46 47
PERIODKEY (271)
COLONKEY (272) 6
MAINKEY (273) 18
FUNCTIONKEY (274) 15 16 17
CALLKEY (275) 58 59
RETURNKEY (276) 39
IFKEY (277) 50 51
ELSEKEY (278) 51
FORKEY (279) 52
DOTKEY (280) 74 75
PLUSKEY (281) 80
MINUSKEY (282) 78 81
MULTKEY (283) 82
DIVKEY (284) 83
ABSKEY (285) 79
SUPKEY (286) 84
INFKEY (287) 85
SUPEQUALKEY (288) 86
INFEQUALKEY (289) 87
EQUALEQUALKEY (290) 88
EXCLAMATIONEQUALKEY (291) 89
EXCLAMATIONKEY (292) 90
ORKEY (293) 91
ANDKEY (294) 92
NAME (295) 5 6 15 16 17 29 30 58 59 67 68 71 73 76 77
STRING (296) 42 44
INTEGER (297) 93
FLOATNUMBER (298) 94


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
FILE (45)
    on left: 1 2 3 4, on right: 0 2 3 4
STRUCTURE (46)
    on left: 5 6, on right: 2
STRUCTBODY1 (47)
    on left: 7 8 9 10, on right: 5 8 9 10
STRUCTBODY2 (48)
    on left: 11 12 13 14, on right: 6 12 13 14
FUNCTION (49)
    on left: 15 16 17, on right: 3 9 13
MAIN (50)
    on left: 18, on right: 4
CONSTRUCTOR (51)
    on left: 19 20, on right: 10 14
CONSTRUCTORBODY (52)
    on left: 21 22 23, on right: 19 20 22 23
INSTRUCTIONLIST (53)
    on left: 24 25, on right: 15 16 17 18 25 50 51 52
INSTRUCTION (54)
    on left: 26 27 28, on right: 23 25
CONSTRUCTOR_CALL (55)
    on left: 29 30, on right: 22
DECLARATION (56)
    on left: 31 32, on right: 26
ASSIGNMENT (57)
    on left: 33 34 35 36, on right: 27
STATEMENT (58)
    on left: 37 38 39, on right: 28
SIMPLE_DECLARATION (59)
    on left: 40 41, on right: 8 12 31
COMPLEX_DECLARATION (60)
    on left: 42 43, on right: 32
STRING_ASSIGNMENT (61)
    on left: 44, on right: 33
EXPRESSION_ASSIGNMENT (62)
    on left: 45, on right: 34 52
VARIABLE_ASSIGNMENT (63)
    on left: 46, on right: 35
NEWOBJECT_ASSIGNMENT (64)
    on left: 47, on right: 36
IF_STATEMENT (65)
    on left: 48 49, on right: 37
SIMPLE_IF_STATEMENT (66)
    on left: 50, on right: 48
IF_ELSE_STATEMENT (67)
    on left: 51, on right: 49
FOR_STATEMENT (68)
    on left: 52, on right: 38
EXPRESSIONLIST (69)
    on left: 53 54, on right: 30 54 59 68
EXPRESSION (70)
    on left: 55 56, on right: 39 43 53 54 62 73 78 79 80 81 82 83 84
    85 86 87 88 89
CALCULABLE_EXPRESSION (71)
    on left: 57 58 59 60 61 62, on right: 45 55
LOGICAL_EXPRESSION (72)
    on left: 63 64 65 66, on right: 50 51 52 66 90 91 92
NEWOBJECT (73)
    on left: 67 68, on right: 47
VARIABLE (74)
    on left: 69 70, on right: 42 43 44 45 46 47 56
SIMPLE_VARIABLE (75)
    on left: 71 72, on right: 69 74 75
ARRAYNAME (76)
    on left: 73, on right: 41 72
COMPLEX_VARIABLE (77)
    on left: 74 75, on right: 70 75
NAMELIST (78)
    on left: 76 77, on right: 6 17 20 40 77
UNARY_OPERATION (79)
    on left: 78 79, on right: 61
BINARY_OPERATION (80)
    on left: 80 81 82 83, on right: 60
COMPARISON (81)
    on left: 84 85 86 87 88 89, on right: 63
LOGICAL_UNARY_OPERATION (82)
    on left: 90, on right: 65
LOGICAL_BINARY_OPERATION (83)
    on left: 91 92, on right: 64
NUMBER (84)
    on left: 93 94, on right: 57
EMPTY (85)
    on left: 95, on right: 1 7 11 21 24


state 0

    0 $accept: . FILE $end

    $default  reduce using rule 95 (EMPTY)

    FILE   go to state 1
    EMPTY  go to state 2


state 1

    0 $accept: FILE . $end
    2 FILE: FILE . STRUCTURE
    3     | FILE . FUNCTION
    4     | FILE . MAIN

    $end         shift, and go to state 3
    STRUCTKEY    shift, and go to state 4
    MAINKEY      shift, and go to state 5
    FUNCTIONKEY  shift, and go to state 6

    STRUCTURE  go to state 7
    FUNCTION   go to state 8
    MAIN       go to state 9


state 2

    1 FILE: EMPTY .

    $default  reduce using rule 1 (FILE)


state 3

    0 $accept: FILE $end .

    $default  accept


state 4

    5 STRUCTURE: STRUCTKEY . NAME LEFTBRACEKEY STRUCTBODY1 RIGHTBRACEKEY
    6          | STRUCTKEY . NAME COLONKEY NAMELIST LEFTBRACEKEY STRUCTBODY2 RIGHTBRACEKEY

    NAME  shift, and go to state 10


state 5

   18 MAIN: MAINKEY . LEFTPARENKEY RIGHTPARENKEY LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY

    LEFTPARENKEY  shift, and go to state 11


state 6

   15 FUNCTION: FUNCTIONKEY . NAME LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY
   16         | FUNCTIONKEY . NAME LEFTPARENKEY RIGHTPARENKEY LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY
   17         | FUNCTIONKEY . NAME LEFTPARENKEY NAMELIST RIGHTPARENKEY LEFTBRACEKEY INSTRUCTIONLIST RIGHTBRACEKEY

    NAME  shift, and go to state 12


state 7

    2 FILE: FILE STRUCTURE .

    $default  reduce using rule 2 (FILE)


state 8

    3 FILE: FILE FUNCTION .

    $default  reduce using rule 3 (FILE)


state 9

    4 FILE: FILE MAIN .

    $default  reduce using rule 4 (FILE)


state 10

    5 STRUCTURE: STRUCTKEY NAME . LEFTBRACEKEY STRUCTBODY1 RIGHTBRACEKEY
    6          | STRUCTKEY NAME . COLONKEY NAMELIST LEFTBRACEKEY STRUCTBODY2 RIGHTBRACEKEY

    LEFTBRACEKEY  shift, and go to state 13
    COLONKEY      shift, and go to state 14


state 11
